# python_ruff_code_quality

./: .gitignore  README.md  pyproject.toml  ruff.toml
code_quality/: code_quality.py
tests/: code_quality_test.py
